feat: implement create spending, get spending history
